address layout issue for aside on detail page

--- a/src/_includes/styles/layouts.css
+++ b/src/_includes/styles/layouts.css
@@ -35,7 +35,7 @@
 
 @media (min-width: 600px) {
   .detail-body {
-    grid-template-columns: 20vw 1fr;
+    grid-template-columns: 18rem 1fr;
   }
   .detail-aside {
     position: sticky;
